# mlops_practice

./: .gitignore
lab1/: data_creation.py  data_preprocessing.py  model_preparation.py  model_testing.py  pipeline.sh
lab2/: jenkins_pipeline
lab3/: .dockerignore  build.sh  docker-compose.yml  dockerfile  pyproject.toml
lab3/app/: main.py  model.py  schemas.py
lab3/models/: model.pkl  model_metadata.json  scaler.pkl
lab3/train/: train_model.py
lab4/: .gitignore  README.md  docker-compose.yml  pyproject.toml
lab4/.dvc/: config
lab4/scripts/: make_v1_raw.py  make_v2_fillna.py  make_v3_onehot.py
lab5/: generate_datasets.py  requirements.txt  run_pipeline.py  test_model.py  train_model.py
lab5/datasets/: clean_dataset_1.csv  clean_dataset_2.csv  clean_dataset_3.csv  noisy_dataset.csv
